Update 5.3 Setting more than one value at a time.md

--- a/I. Using Thymeleaf/5.3 Setting more than one value at a time.md
+++ b/I. Using Thymeleaf/5.3 Setting more than one value at a time.md
@@ -4,17 +4,17 @@
 
 - `th:alt-title`会设置`alt`和`title`。
 - `th:lang-xmllang`会设置`lang`和` xml:lang`。
-For our GTVG home page, this will allow us to substitute this:
+对于我们的主页，这允许我们将以下内容：
 ```html
 <img src="../../images/gtvglogo.png" 
      th:attr="src=@{/images/gtvglogo.png},title=#{logo},alt=#{logo}" />
 ```
-…or this, which is equivalent:
+或者，以下相等的内容：
 ```html
 <img src="../../images/gtvglogo.png" 
      th:src="@{/images/gtvglogo.png}" th:title="#{logo}" th:alt="#{logo}" />
 ```
-…with this:
+替换为:
 ```html
 <img src="../../images/gtvglogo.png" 
      th:src="@{/images/gtvglogo.png}" th:alt-title="#{logo}" />
