Update 5.4 Appending and prepending.md

--- a/I. Using Thymeleaf/5.4 Appending and prepending.md
+++ b/I. Using Thymeleaf/5.4 Appending and prepending.md
@@ -1,8 +1,8 @@
 ### 5.4 附加与前置
 
-Thymeleaf also offers the `th:attrappend` and `th:attrprepend` attributes, which append (suffix) or prepend (prefix) the result of their evaluation to the existing attribute values.
+Thymeleaf也提供了`th:attrappend`和`th:attrprepend`属性。它们会给既存的属性值附加（后缀）或者前置（前缀）求值的结果。
 
-For example, you might want to store the name of a CSS class to be added (not set, just added) to one of your buttons in a context variable, because the specific CSS class to be used would depend on something that the user did before:
+例如，你可能想要保存一个CSS类的名字，把它加入（不是设置，只是加入）上下文变量里的其中一个按钮。因为哪个特定的CSS类会被使用，取决于用户之前做了什么：
 ```html
 <input type="button" value="Do it!" class="btn" th:attrappend="class=${' ' + cssStyle}" />
 ```
