Update 5.5 Fixed-value boolean attributes.md

--- a/I. Using Thymeleaf/5.5 Fixed-value boolean attributes.md
+++ b/I. Using Thymeleaf/5.5 Fixed-value boolean attributes.md
@@ -1,8 +1,7 @@
 ### 5.5 定值布尔属性
 
-HTML has the concept of boolean attributes, attributes that have no value and the prescence of one means that value is “true”. In XHTML, these attributes take just 1 value, which is itself.
-
-For example, `checked`:
+HTML有布尔属性的概念。布尔属性没有值，属性存在意味着值是“true”。在XHTML里，这些属性只有一个值，这个值就是它自己。
+例如，`checked`：
 ```html
 <input type="checkbox" name="option2" checked /> <!-- HTML -->
 <input type="checkbox" name="option1" checked="checked" /> <!-- XHTML -->
