Update 5.6 Setting the value of any attribute （default attribute processor）.md

--- a/I. Using Thymeleaf/5.6 Setting the value of any attribute （default attribute processor）.md
+++ b/I. Using Thymeleaf/5.6 Setting the value of any attribute （default attribute processor）.md
@@ -1,6 +1,6 @@
 ### 5.6 设置任何属性的值（默认的属性处理器）
 
-Thymeleaf offers a default attribute processor that allows us to set the value of any attribute, even if no specific th:* processor has been defined for it at the Standard Dialect.
+Thymeleaf提供了一个默认的属性处理器。它允许我们设置任何属性的值，即使没有在标准方言里为它定义特定的th:*处理器。
 
 So something like:
 ```html
