Update 5.6 Setting the value of any attribute （default attribute processor）.md

--- a/I. Using Thymeleaf/5.6 Setting the value of any attribute （default attribute processor）.md
+++ b/I. Using Thymeleaf/5.6 Setting the value of any attribute （default attribute processor）.md
@@ -2,11 +2,11 @@
 
 Thymeleaf提供了一个默认的属性处理器。它允许我们设置任何属性的值，即使没有在标准方言里为它定义特定的th:*处理器。
 
-So something like:
+所以如下：
 ```html
 <span th:whatever="${user.name}">...</span>
 ```
-Will result in:
+将会变成：
 ```html
 <span whatever="John Apricot">...</span>
 ```
