Update 5.7 Support for HTML5-friendly attribute and element names.md

--- a/I. Using Thymeleaf/5.7 Support for HTML5-friendly attribute and element names.md
+++ b/I. Using Thymeleaf/5.7 Support for HTML5-friendly attribute and element names.md
@@ -1,6 +1,6 @@
 ### 5.7 对HTML5友好的属性和元素名的支持
 
-It is also possible to use a completely different syntax to apply processors to your templates in a more HTML5-friendly manner.
+还可以使用一种完全不同的语法，以一种对HTML5友好的方式为你的模版应用处理器。
 ```html
 <table>
     <tr data-th-each="user : ${users}">
