Update 5.7 Support for HTML5-friendly attribute and element names.md

--- a/I. Using Thymeleaf/5.7 Support for HTML5-friendly attribute and element names.md
+++ b/I. Using Thymeleaf/5.7 Support for HTML5-friendly attribute and element names.md
@@ -9,7 +9,7 @@
     </tr>
 </table>
 ```
-The `data-{prefix}-{name}` syntax is the standard way to write custom attributes in HTML5, without requiring developers to use any namespaced names like `th:*`. Thymeleaf makes this syntax automatically available to all your dialects (not only the Standard ones).
+`data-{prefix}-{name}`语法是在HTML5里写自定义属性的标准方式，不需要开发者使用任何类似于`th:*`的已设置命名空间的名称。Thymeleaf会使这种语法自动对你的所有方言（不仅仅是标准方言）生效。
 
 There is also a syntax to specify custom tags: `{prefix}-{name}`, which follows the W3C Custom Elements specification (a part of the larger W3C Web Components spec). This can be used, for example, for the `th:block` element (or also `th-block`), which will be explained in a later section.
 
