--- a/I. Using Thymeleaf/5.7 Support for HTML5-friendly attribute and element names.md
+++ b/I. Using Thymeleaf/5.7 Support for HTML5-friendly attribute and element names.md
@@ -11,6 +11,6 @@
 ```
 `data-{prefix}-{name}`语法是在HTML5里写自定义属性的标准方式，不需要开发者使用任何类似于`th:*`的已设置命名空间的名称。Thymeleaf会使这种语法自动对你的所有方言（不仅仅是标准方言）生效。
 
-还有一种指定自定义标签的语法：`{prefix}-{name}`，它遵循W3C自定义元素规范(a part of the larger W3C Web Components spec). This can be used, for example, for the `th:block` element (or also `th-block`), which will be explained in a later section.
+还有一种指定自定义标签的语法：`{prefix}-{name}`，它遵循W3C自定义元素规范（更大的W3C网络组件规范的一部分）。可以这样使用：例如，对于`th:block`元素，也可以写成`th-block`。它会在之后的章节介绍。
 
-**Important**: this syntax is an addition to the namespaced `th:*` one, it does not replace it. There is no intention at all to deprecate the namespaced syntax in the future.
+**Important**:这种语法是对设置命名空间的`th:*`的补充，不会取代它。There is no intention at all to deprecate the namespaced syntax in the future.
