Update 5.7 Support for HTML5-friendly attribute and element names.md

--- a/I. Using Thymeleaf/5.7 Support for HTML5-friendly attribute and element names.md
+++ b/I. Using Thymeleaf/5.7 Support for HTML5-friendly attribute and element names.md
@@ -13,4 +13,4 @@
 
 还有一种指定自定义标签的语法：`{prefix}-{name}`，它遵循W3C自定义元素规范（更大的W3C网络组件规范的一部分）。可以这样使用：例如，对于`th:block`元素，也可以写成`th-block`。它会在之后的章节介绍。
 
-**Important**:这种语法是对设置命名空间的`th:*`的补充，不会取代它。There is no intention at all to deprecate the namespaced syntax in the future.
+**重要**:这种语法是对设置命名空间的`th:*`的补充，不会取代它。没有任何在未来弃用设置命名空间的语法的意图。
