翻译6.1 遍历基础

--- a/I. Using Thymeleaf/6.1 Iteration basics.md
+++ b/I. Using Thymeleaf/6.1 Iteration basics.md
@@ -1,5 +1,4 @@
 ### 6.1 遍历基础
 
-To display products in our `/WEB-INF/templates/product/list.html` page we will use a table. Each of our products will be displayed in a row (a `<tr>` element), and so for our template we will need to create a template row – one that will exemplify how we want each product to be displayed – and then instruct Thymeleaf to repeat it, once for each product.
-
-The Standard Dialect offers us an attribute for exactly that: `th:each`.
+为了展示`/WEB-INF/templates/product/list.html`页面的产品，我们将使用表格。 我们的每个产品将分别在一行（`<tr>`元素）里展示。对于我们的模板，我们需要创建模板行————用来举例说明我们想要如何展示每一个产品，然后通知Thymeleaf重复，每次一个产品。
+正是为此，标准方言为我们提供了一个属性：`th:each`。
