Update 6.2 Keeping iteration status.md

--- a/I. Using Thymeleaf/6.2 Keeping iteration status.md
+++ b/I. Using Thymeleaf/6.2 Keeping iteration status.md
@@ -1,8 +1,8 @@
 ### 6.2 保持遍历状态
 
-When using `th:each`, Thymeleaf offers a mechanism useful for keeping track of the status of your iteration: the status variable.
+当使用`th:each`时，Thymeleaf提供了一种有用的机制来跟踪遍历的状态：状态变量。
 
-Status variables are defined within a `th:each` attribute and contain the following data:
+状态变量定义在`th:each`属性里，并包含以下数据：
 
 - The current iteration index, starting with 0. This is the index property.
 - The current iteration index, starting with 1. This is the count property.
