--- a/I. Using Thymeleaf/6.2 Keeping iteration status.md
+++ b/I. Using Thymeleaf/6.2 Keeping iteration status.md
@@ -4,9 +4,9 @@
 
 状态变量定义在`th:each`属性里，并包含以下数据：
 
-- The current iteration index, starting with 0. This is the index property.
-- The current iteration index, starting with 1. This is the count property.
-- The total amount of elements in the iterated variable. This is the size property.
+- 当前的遍历索引，从0开始。此为index属性。
+- 当前的遍历索引，从1开始。此为count属性。
+- 被遍历变量里的元素数量。此为size属性。
 - The iter variable for each iteration. This is the current property.
 - Whether the current iteration is even or odd. These are the even/odd boolean properties.
 - Whether the current iteration is the first one. This is the first boolean property.
