Update 6.2 Keeping iteration status.md

--- a/I. Using Thymeleaf/6.2 Keeping iteration status.md
+++ b/I. Using Thymeleaf/6.2 Keeping iteration status.md
@@ -7,12 +7,12 @@
 - 当前的遍历索引，从0开始。此为index属性。
 - 当前的遍历索引，从1开始。此为count属性。
 - 被遍历变量里的元素数量。此为size属性。
-- The iter variable for each iteration. This is the current property.
-- Whether the current iteration is even or odd. These are the even/odd boolean properties.
-- Whether the current iteration is the first one. This is the first boolean property.
-- Whether the current iteration is the last one. This is the last boolean property.
+- 每次遍历的遍历变量。此为current属性。
+- 当前的遍历是偶数次还是奇数次。此为even/odd布尔属性。
+- 当前是否为首次遍历。此为first布尔属性。
+- 当前是否为最后一次遍历。此为last布尔属性。
 
-Let’s see how we could use it with the previous example:
+让我们看看怎么在之前的例子里使用它：
 ```html
 <table>
   <tr>
@@ -27,7 +27,7 @@ Let’s see how we could use it with the previous example:
   </tr>
 </table>
 ```
-The status variable (`iterStat` in this example) is defined in the `th:each` attribute by writing its name after the iter variable itself, separated by a comma. Just like the iter variable, the status variable is also scoped to the fragment of code defined by the tag holding the `th:each` attribute.
+状态变量（此例子里的`iterStat`）定义在`th:each`属性里，跟在遍历变量后面，由逗号分隔。就像遍历变量一样，the status variable is also scoped to the fragment of code defined by the tag holding the `th:each` attribute.
 
 Let’s have a look at the result of processing our template:
 ```html
