Update 6.2 Keeping iteration status.md

--- a/I. Using Thymeleaf/6.2 Keeping iteration status.md
+++ b/I. Using Thymeleaf/6.2 Keeping iteration status.md
@@ -27,9 +27,9 @@
   </tr>
 </table>
 ```
-状态变量（此例子里的`iterStat`）定义在`th:each`属性里，跟在遍历变量后面，由逗号分隔。就像遍历变量一样，the status variable is also scoped to the fragment of code defined by the tag holding the `th:each` attribute.
+状态变量（此例子里的`iterStat`）定义在`th:each`属性里，跟在遍历变量后面，由逗号分隔。就像遍历变量一样，状态变量的作用范围也是在由持有`th:each`属性的标签定义的代码片段之上。
 
-Let’s have a look at the result of processing our template:
+让我们看一下处理我们的模版的结果：
 ```html
 <!DOCTYPE html>
 
