Update 6.2 Keeping iteration status.md

--- a/I. Using Thymeleaf/6.2 Keeping iteration status.md
+++ b/I. Using Thymeleaf/6.2 Keeping iteration status.md
@@ -81,9 +81,9 @@
   
 </html>
 ```
-Note that our iteration status variable has worked perfectly, establishing the `odd` CSS class only to odd rows.
+注意：我们的遍历状态变量完美地工作了，只在奇数行上建立了`odd`CSS类。
 
-If you don’t explicitly set a status variable, Thymeleaf will always create one for you by suffixing `Stat` to the name of the iteration variable:
+如果你不明确地设置一个状态变量，Thymeleaf总是会通过在遍历变量的名字后加上后缀`Stat`为你创建一个状态变量：
 ```html
 <table>
   <tr>
