Update 6.3 Optimizing through lazy retrieval of data.md

--- a/I. Using Thymeleaf/6.3 Optimizing through lazy retrieval of data.md
+++ b/I. Using Thymeleaf/6.3 Optimizing through lazy retrieval of data.md
@@ -1,8 +1,8 @@
 ### 6.3 通过数据的懒惰检索实现优化
 
-Sometimes we might want to optimize the retrieval of collections of data (e.g. from a database) so that these collections are only retrieved if they are really going to be used.
+有时我们可能想要优化对数据的集合（比如来自于数据库）的检索。如果这些集合确实要被使用，才会被检索。
 ```
-Actually, this is something that can be applied to any piece of data, but given the size that in-memory collections might have, retrieving collections that are meant to be iterated is the most common case for this scenario.
+实际上，这可以被应用到任何一块数据。这种场景的最普遍案例是给出集合在内存中的大小，遍历检索数据。
 ```
 In order to support this, Thymeleaf offers a mechanism to lazily load context variables. Context variables that implement the `ILazyContextVariable` interface – most probably by extending its `LazyContextVariable` default implementation – will be resolved in the moment of being executed. For example:
 ```java
