Update 6.3 Optimizing through lazy retrieval of data.md

--- a/I. Using Thymeleaf/6.3 Optimizing through lazy retrieval of data.md
+++ b/I. Using Thymeleaf/6.3 Optimizing through lazy retrieval of data.md
@@ -4,7 +4,7 @@
 ```
 实际上，这可以被应用到任何一块数据。这种场景的最普遍案例是给出集合在内存中的大小，遍历检索数据。
 ```
-In order to support this, Thymeleaf offers a mechanism to lazily load context variables. Context variables that implement the `ILazyContextVariable` interface – most probably by extending its `LazyContextVariable` default implementation – will be resolved in the moment of being executed. For example:
+为此，Thymeleaf提供了一种机制，来懒惰加载上下文变量。实现了`ILazyContextVariable`接口的上下文变量————最有可能的是扩展了它的`LazyContextVariable`默认实现，将会在执行的时候被解析。比如：
 ```java
 context.setVariable(
      "users",
@@ -15,13 +15,13 @@ context.setVariable(
          }
      });
 ```
-This variable can be used without knowledge of its lazyness, in code such as:
+即使没有关于此变量的惰性的知识，也可以使用它。在如下代码里：
 ```html
 <ul>
   <li th:each="u : ${users}" th:text="${u.name}">user name</li>
 </ul>
 ```
-But at the same time, will never be initialized (its `loadValue()` method will never be called) if `condition` evaluates to `false` in code such as:
+但是同时，如果下面代码里的`condition`的值为`false`，那么上面的代码不会被初始化（它的`loadValue()`方法不会被调用）。
 ```html
 <ul th:if="${condition}">
   <li th:each="u : ${users}" th:text="${u.name}">user name</li>
