Update 7.1 Simple conditionals：if and unless.md

--- a/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
+++ b/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
@@ -2,7 +2,7 @@
 
 有时，你会需要模版的某部分在满足特定条件时，才在结果中显示。
 
-For example, imagine we want to show in our product table a column with the number of comments that exist for each product and, if there are any comments, a link to the comment detail page for that product.
+比如，想象一下：我们想要在产品表格的某一列里，展示每一个产品的评论数量，并且如果有评论的话，还要显示一条指向评论详细页面的链接。
 
 In order to do this, we would use the `th:if` attribute:
 ```html
