Update 7.1 Simple conditionals：if and unless.md

--- a/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
+++ b/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
@@ -4,7 +4,7 @@
 
 比如，想象一下：我们想要在产品表格的某一列里，展示每一个产品的评论数量，并且如果有评论的话，还要显示一条指向评论详细页面的链接。
 
-In order to do this, we would use the `th:if` attribute:
+为此，我们使用`th:if`属性：
 ```html
 <table>
   <tr>
@@ -26,7 +26,7 @@ In order to do this, we would use the `th:if` attribute:
   </tr>
 </table>
 ```
-Quite a lot of things to see here, so let’s focus on the important line:
+这里有相当多可以看的地方，让我们看到最重要的一行上：
 ```html
 <a href="comments.html"
    th:href="@{/product/comments(prodId=${prod.id})}" 
