Update 7.1 Simple conditionals：if and unless.md

--- a/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
+++ b/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
@@ -32,7 +32,7 @@
    th:href="@{/product/comments(prodId=${prod.id})}" 
    th:if="${not #lists.isEmpty(prod.comments)}">view</a>
 ```
-This will create a link to the comments page (with URL `/product/comments`) with a `prodId` parameter set to the `id` of the product, but only if the product has any comments.
+这会创建一条指向评论页的链接（URL是`/product/comments`），并把`prodId`参数设置到产品`id`上，但是只会在产品有任何评论的情况下。
 
 Let’s have a look at the resulting markup:
 ```html
