Update 7.1 Simple conditionals：if and unless.md

--- a/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
+++ b/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
@@ -34,7 +34,7 @@
 ```
 这会创建一条指向评论页的链接（URL是`/product/comments`），并把`prodId`参数设置到产品`id`上，但是只会在产品有任何评论的情况下。
 
-Let’s have a look at the resulting markup:
+让我们看一看生成的标记：
 ```html
 <table>
   <tr>
@@ -79,7 +79,7 @@ Let’s have a look at the resulting markup:
   </tr>
 </table>
 ```
-Perfect! That’s exactly what we wanted.
+完美！这就是我们想要的。
 
 Note that the `th:if` attribute will not only evaluate boolean conditions. Its capabilities go a little beyond that, and it will evaluate the specified expression as `true` following these rules:
 
