Update 7.1 Simple conditionals：if and unless.md

--- a/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
+++ b/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
@@ -81,15 +81,15 @@
 ```
 完美！这就是我们想要的。
 
-Note that the `th:if` attribute will not only evaluate boolean conditions. Its capabilities go a little beyond that, and it will evaluate the specified expression as `true` following these rules:
+注意：`th:if`属性不仅仅会对布尔条件求值。它的能力超出了布尔条件的范围。他会依据以下规则，将特定的表达式求值为`true`：
 
-- If value is not null:
-	- If value is a boolean and is true.
-	- If value is a number and is non-zero
-	- If value is a character and is non-zero
-	- If value is a String and is not “false”, “off” or “no”
-	- If value is not a boolean, a number, a character or a String.
-- (If value is null, th:if will evaluate to false).
+- 如果值不为null：
+	- 如果值是布尔值，并且为true
+	- 如果值是数字，并且不为0
+	- 如果值是字符，并且不为0
+	- 如果值是字符串，，并且不为“false”， “off”或者“no”
+	- 如果值不是布尔值，数字，字符或者字符串
+- （如果值为null，`th:if`会求值为false)
 
 Also, `th:if` has an inverse attribute, `th:unless`, which we could have used in the previous example instead of using a `not` inside the OGNL expression:
 ```html
