Update 7.1 Simple conditionals：if and unless.md

--- a/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
+++ b/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
@@ -91,7 +91,7 @@
 	- 如果值不是布尔值，数字，字符或者字符串
 - （如果值为null，`th:if`会求值为false)
 
-Also, `th:if` has an inverse attribute, `th:unless`, which we could have used in the previous example instead of using a `not` inside the OGNL expression:
+`th:if`有一个相反的属性：`th:unless`。我们可以把它用在先前的例子里，代替在OGNL表达式里使用`not`：
 ```html
 <a href="comments.html"
    th:href="@{/comments(prodId=${prod.id})}" 
