Update 7.1 Simple conditionals：if and unless.md

--- a/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
+++ b/I. Using Thymeleaf/7.1 Simple conditionals：if and unless.md
@@ -87,7 +87,7 @@
 	- 如果值是布尔值，并且为true
 	- 如果值是数字，并且不为0
 	- 如果值是字符，并且不为0
-	- 如果值是字符串，，并且不为“false”， “off”或者“no”
+	- 如果值是字符串，并且不为“false”， “off”或者“no”
 	- 如果值不是布尔值，数字，字符或者字符串
 - （如果值为null，`th:if`会求值为false)
 
