Update 7.2 Switch statements.md

--- a/I. Using Thymeleaf/7.2 Switch statements.md
+++ b/I. Using Thymeleaf/7.2 Switch statements.md
@@ -1,6 +1,6 @@
 ### 7.2 switch声明
 
-There is also a way to display content conditionally using the equivalent of a switch structure in Java: the `th:switch` / `th:case` attribute set.
+还有一种有条件地表示内容的方法，与Java里的switch结构等价：`th:switch` / `th:case`属性集。
 ```html
 <div th:switch="${user.role}">
   <p th:case="'admin'">User is an administrator</p>
