Update 7.2 Switch statements.md

--- a/I. Using Thymeleaf/7.2 Switch statements.md
+++ b/I. Using Thymeleaf/7.2 Switch statements.md
@@ -7,9 +7,9 @@
   <p th:case="#{roles.manager}">User is a manager</p>
 </div>
 ```
-Note that as soon as one `th:case` attribute is evaluated as `true`, every other `th:case` attribute in the same switch context is evaluated as `false`.
+注意：一旦一个`th:case`属性为`true`，在同一个switch上下文里的其它的`th:case`属性会被求值为`false`。
 
-The default option is specified as `th:case="*"`:
+默认选项用`th:case="*"`指定：
 ```html
 <div th:switch="${user.role}">
   <p th:case="'admin'">User is an administrator</p>
