Update 8.4 Removing template fragments.md

--- a/I. Using Thymeleaf/8.4 Removing template fragments.md
+++ b/I. Using Thymeleaf/8.4 Removing template fragments.md
@@ -1,6 +1,6 @@
 ### 8.4 移除模版片段
 
-Back to the example application, let’s revisit the last version of our product list template:
+回到示例应用，让我们再看看最后一版的产品列表模版：
 ```html
 <table>
   <tr>
@@ -22,11 +22,11 @@ Back to the example application, let’s revisit the last version of our product
   </tr>
 </table>
 ```
-This code is just fine as a template, but as a static page (when directly open by a browser without Thymeleaf processing it) it would not make a nice prototype.
+这段代码作为模版还好，但如果是一个静态页面（当直接由浏览器打开，而不是由Thymeleaf处理时），就称不上是一个好的原型了。
 
-Why? Because, although perfectly displayable by browsers, that table only has a row, and this row has mock data. As a prototype, it simply wouldn’t look realistic enough… we should have more than one product, we need more rows.
+为什么呢？因为，尽管浏览器完美地表示了，但是表格只有一行，这行还是假数据。作为原型，看起来不够真实······我们应当有多个产品，我们需要更多行。
 
-So let’s add some:
+那就让我们加一些：
 ```html
 <table>
   <tr>
@@ -65,7 +65,7 @@ So let’s add some:
   </tr>
 </table>
 ```
-Ok, now we have three, definitely better for a prototype. But… what will happen when we process it with Thymeleaf?:
+好的，现在我们有三行了。对原型来说，绝对比之前更好。但是······当我们用Thymeleaf处理的时候，会发生什么呢？
 ```html
 <table>
   <tr>
