翻译8.4 移除模版片段

--- a/I. Using Thymeleaf/8.4 Removing template fragments.md
+++ b/I. Using Thymeleaf/8.4 Removing template fragments.md
@@ -127,9 +127,9 @@
   </tr>
 </table>
 ```
-The last two rows are mock rows! Well, of course they are: iteration was only applied to the first row, so there is no reason why Thymeleaf should have removed the other two.
+最后两行是假数据！遍历只应用在第一行，所以后两行不应该出现。
 
-We need a way to remove those two rows during template processing. Let’s use the `th:remove` attribute on the second and third `<tr>` tags:
+我们需要在模版处理时移除那两行。让我们在第二、第三个`<tr>`标签上使用`th:remove`属性：
 ```html
 <table>
   <tr>
@@ -168,7 +168,7 @@ We need a way to remove those two rows during template processing. Let’s use t
   </tr>
 </table>
 ```
-Once processed, everything will look again as it should:
+模版处理后，正常显示：
 ```html
 <table>
   <tr>
@@ -213,15 +213,16 @@ Once processed, everything will look again as it should:
   </tr>
 </table>
 ```
-And what does that `all` value in the attribute, mean? `th:remove` can behave in five different ways, depending on its value:
+那个属性里的`all`值是什么意思呢🤔？`th:remove`依据它的值，有五种表现形式：
 
-- `all`: Remove both the containing tag and all its children.
-- `body`: Do not remove the containing tag, but remove all its children.
-- `tag`: Remove the containing tag, but do not remove its children.
-- `all-but-first`: Remove all children of the containing tag except the first one.
-- `none` : Do nothing. This value is useful for dynamic evaluation.
+- `all`: 移除所在的标签和它的所有子节点。
+- `body`: 不移除所在的标签，但是移除它的所有子节点。
+- `tag`: 移除所在的标签，但是不移除它的子节点。
+- `all-but-first`: 移除所在标签的第一个子节点之外的所有子节点。
+- `none` : 什么也不做。这个值对动态求值有用。
 
-What can that `all-but-first` value be useful for? It will let us save some `th:remove="all"` when prototyping:
+值`all-but-first`有什么用？它让我们在原型设计的时候，可以保留某些`th:remove="all"`：
+
 ```html
 <table>
   <thead>
@@ -264,14 +265,14 @@ What can that `all-but-first` value be useful for? It will let us save some `th:
   </tbody>
 </table>
 ```
-The `th:remove` attribute can take any Thymeleaf Standard Expression, as long as it returns one of the allowed String values (`all`, `tag`, `body`, `all-but-first` or `none`).
+`th:remove`属性接受任何的Thymeleaf标准表达式，只要它返回允许的字符串值（`all`，`tag`，`body`，`all-but-first`或者`none`）。
 
-This means removals could be conditional, like:
+这意味着可以使用条件表达式，比如：
 ```html
 <a href="/something" th:remove="${condition}? tag : none">Link text not to be removed</a>
 ```
-Also note that `th:remove` considers `null` a synonym to `none`, so the following works the same as the example above:
+注意`th:remove`将`null`等同于`none`，所以下面的例子和上面的例子的结果相同：
 ```html
 <a href="/something" th:remove="${condition}? tag">Link text not to be removed</a>
 ```
-In this case, if `${condition}` is false, `null` will be returned, and thus no removal will be performed.
+在这种情况下，如果`${condition}`为false，会返回`null`，因此什么也不会做。
