Update 12.2 Text inlining.md

--- a/I. Using Thymeleaf/12.2 Text inlining.md
+++ b/I. Using Thymeleaf/12.2 Text inlining.md
@@ -1,6 +1,6 @@
 ### 12.2 文本内联
 
-文本内联与表达式内联非常相似，但是实际上文本表达式更加强大。它需要使用`th:inline="text"`显式地启用。
+文本内联与表达式内联非常相似，但是实际上文本内联更加强大。它需要使用`th:inline="text"`显式地启用。
 
 Text inlining not only allows us to use the same inlined expressions we just saw, but in fact processes tag bodies as if they were templates processed in the `TEXT` template mode, which allows us to perform text-based template logic (not only output expressions).
 
