--- a/I. Using Thymeleaf/12.2 Text inlining.md
+++ b/I. Using Thymeleaf/12.2 Text inlining.md
@@ -2,6 +2,6 @@
 
 文本内联与表达式内联非常相似，但是实际上文本内联更加强大。它需要使用`th:inline="text"`显式地启用。
 
-Text inlining not only allows us to use the same inlined expressions we just saw, but in fact processes tag bodies as if they were templates processed in the `TEXT` template mode, which allows us to perform text-based template logic (not only output expressions).
+文本内联不仅仅允许我们使用相同的内联表达式，而且实际上，处理起标签主体来就好像它们是`文本`模版模式下的模版。这允许我们执行基于文本的模版逻辑（不仅仅是输出表达式）。
 
 We will see more about this in the next chapter about the textual template modes.
