Update 12.2 Text inlining.md

--- a/I. Using Thymeleaf/12.2 Text inlining.md
+++ b/I. Using Thymeleaf/12.2 Text inlining.md
@@ -4,4 +4,4 @@
 
 文本内联不仅仅允许我们使用相同的内联表达式，而且实际上，处理起标签主体来就好像它们是`文本`模版模式下的模版。这允许我们执行基于文本的模版逻辑（不仅仅是输出表达式）。
 
-We will see more about this in the next chapter about the textual template modes.
+下一章里，我们将会看到更多关于文本模版模式的内容。
