Update 12.3 JavaScript inlining.md

--- a/I. Using Thymeleaf/12.3 JavaScript inlining.md
+++ b/I. Using Thymeleaf/12.3 JavaScript inlining.md
@@ -1,6 +1,6 @@
 ### 12.3 JavaScript内联
 
-JavaScript inlining allows for a better integration of JavaScript `<script>` blocks in templates being processed in the `HTML` template mode.
+JavaScript内联考虑了更好地整合`HTML`模版模式下的JavaScript `<script>`块。
 
 As with text inlining, this is actually equivalent to processing the scripts contents as if they were templates in the `JAVASCRIPT` template mode, and therefore all the power of the textual template modes (see next chapter) will be at hand. However, in this section we will focus on how we can use it for adding the output of our Thymeleaf expressions into our JavaScript blocks.
 
