Update 12.3 JavaScript inlining.md

--- a/I. Using Thymeleaf/12.3 JavaScript inlining.md
+++ b/I. Using Thymeleaf/12.3 JavaScript inlining.md
@@ -2,7 +2,7 @@
 
 JavaScript内联考虑了更好地整合`HTML`模版模式下的JavaScript `<script>`块。
 
-As with text inlining, this is actually equivalent to processing the scripts contents as if they were templates in the `JAVASCRIPT` template mode, and therefore all the power of the textual template modes (see next chapter) will be at hand. However, in this section we will focus on how we can use it for adding the output of our Thymeleaf expressions into our JavaScript blocks.
+与文本内联一样，这实际上等价于在`JAVASCRIPT`模版模式下处理脚本内容。因此，文本模版模式（看下一章）的所有能力也就触手可及了。但是，这一节我们将聚焦在如何使用它来将Thymeleaf表达式的输出添加到JavaScript块里。
 
 This mode has to be explicitly enabled using `th:inline="javascript"`:
 ```html
