Update 12.3 JavaScript inlining.md

--- a/I. Using Thymeleaf/12.3 JavaScript inlining.md
+++ b/I. Using Thymeleaf/12.3 JavaScript inlining.md
@@ -4,7 +4,7 @@ JavaScript内联考虑了更好地整合`HTML`模版模式下的JavaScript `<scr
 
 与文本内联一样，这实际上等价于在`JAVASCRIPT`模版模式下处理脚本内容。因此，文本模版模式（看下一章）的所有能力也就触手可及了。但是，这一节我们将聚焦在如何使用它来将Thymeleaf表达式的输出添加到JavaScript块里。
 
-This mode has to be explicitly enabled using `th:inline="javascript"`:
+JavaScript内联需要使用`th:inline="javascript"`显式启用：
 ```html
 <script th:inline="javascript">
     ...
@@ -12,7 +12,7 @@ This mode has to be explicitly enabled using `th:inline="javascript"`:
     ...
 </script>
 ```
-This will result in:
+这会生成：
 ```html
 <script th:inline="javascript">
     ...
@@ -20,7 +20,7 @@ This will result in:
     ...
 </script>
 ```
-Two important things to note in the code above:
+上面的代码里有两件重要的事情需要提醒一下：
 
 First, that JavaScript inlining will not only output the required text, but also enclose it with quotes and JavaScript-escape its contents, so that the expression results are output as a `well-formed JavaScript literal`.
 
