--- a/I. Using Thymeleaf/12.3 JavaScript inlining.md
+++ b/I. Using Thymeleaf/12.3 JavaScript inlining.md
@@ -22,9 +22,9 @@ JavaScript内联需要使用`th:inline="javascript"`显式启用：
 ```
 上面的代码里有两件重要的事情需要提醒一下：
 
-First, that JavaScript inlining will not only output the required text, but also enclose it with quotes and JavaScript-escape its contents, so that the expression results are output as a `well-formed JavaScript literal`.
+首先，JavaScript内联不仅仅会输出需要的文本，而且会用引号将它括起来，并转义内容。这样，表达式的结果会以`格式良好的JavaScript字面量`输出。
 
-Second, that this is happening because we are outputting the `${session.user.name}` expression as `escaped`, i.e. using a double-bracket expression: `[[${session.user.name}]]`. If instead we used unescaped like:
+其次，会这样是因为我们以`转义`的方式输出了`${session.user.name}`表达式。即使用双括号表达式：`[[${session.user.name}]]`。如果我们使用非转义的方式，例如：
 ```html
 <script th:inline="javascript">
     ...
@@ -32,7 +32,7 @@ Second, that this is happening because we are outputting the `${session.user.nam
     ...
 </script>
 ```
-The result would look like:
+结果会是这样：
 ```html
 <script th:inline="javascript">
     ...
@@ -40,4 +40,4 @@ The result would look like:
     ...
 </script>
 ```
-…which is malformed JavaScript code. But outputting something unescaped might be what we need if we are building parts of our script by means of appending inlined expressions, so it’s good to have this tool at hand.
+这是畸形的 JavaScript代码。但是如果我们正在用追加内联表达式的方式构建部分脚本，输出非转义的东西可能正是我们需要的。所以，手边有这个工具还是很赞的。
