Update 12.4 CSS inlining.md

--- a/I. Using Thymeleaf/12.4 CSS inlining.md
+++ b/I. Using Thymeleaf/12.4 CSS inlining.md
@@ -1,17 +1,17 @@
 ### 12.4 CSS内联
 
-Thymeleaf also allows the use of inlining in CSS `<style>` tags, such as:
+Thymeleaf也允许在CSS的`<style>`标签里使用内联，比如：
 ```html
 <style th:inline="css">
   ...
 </style>
 ```
-For example, say we have two variables set to two different String values:
+例如，假设我们有两个变量设置成了两个不同的String值：
 ```html
 classname = 'main elems'
 align = 'center'
 ```
-We could use them just like:
+我们可以像这样使用它们：
 ```html
 <style th:inline="css">
     .[[${classname}]] {
@@ -19,7 +19,7 @@ We could use them just like:
     }
 </style>
 ```
-And the result would be:
+结果会是：
 ```html
 <style th:inline="css">
     .main\ elems {
