Update 12.4 CSS inlining.md

--- a/I. Using Thymeleaf/12.4 CSS inlining.md
+++ b/I. Using Thymeleaf/12.4 CSS inlining.md
@@ -27,4 +27,4 @@ align = 'center'
     }
 </style>
 ```
-Note how CSS inlining also bears some intelligence, just like JavaScript’s. Specifically, expressions output via escaped expressions like `[[${classname}]]` will be escaped as `CSS identifiers`. That is why our `classname = 'main elems'` has turned into `main\ elems` in the fragment of code above.
+注意CSS内联也有些智能，就像JavaScript一样。特别地，通过类似`[[${classname}]]` 的转义表达式输出的表达式会被转义为`CSS标识符`。这也是为什么我们的`classname = 'main elems'`会变成上面的代码片段里的`main\ elems`。
