翻译13.1 文本语法

--- a/I. Using Thymeleaf/13.1 Textual syntax.md
+++ b/I. Using Thymeleaf/13.1 Textual syntax.md
@@ -1,10 +1,10 @@
 ### 13.1 文本语法
 
-Three of the Thymeleaf template modes are considered `textual`: `TEXT`,`JAVASCRIPT` and `CSS`. This differentiates them from the markup template modes: `HTML` and `XML`.
+有三种Thymeleaf模版模式被认为是`文本`：`文本`，`JAVASCRIPT`和`CSS`。它们区别于标记模版模式：`HTML`和`XML`.
 
-The key difference between textual template modes and the markup ones is that in a textual template there are no tags into which to insert logic in the form of attributes, so we have to rely on other mechanisms.
+文本模版模式与标记模版模式的关键区别在于：在文本模版里，没有标签可供我们以属性的形式插入逻辑。所以，我们不得不依赖其它的机制。
 
-The first and most basic of these mechanisms is `inlining`, which we have already detailed in the previous chapter. Inlining syntax is the most simple way to output results of expressions in textual template mode, so this is a perfectly valid template for a text email.
+这些机制里第一位同时也是最基础的就是`内联`。我们在之前的章节里详细介绍过。在文本模版模式里，内联语法是输出表达式结果的最简单的方式。 所以，这是用于一封文本邮件的完全有效的模版。
 ```
   Dear [(${name})],
 
