Update 13.1 Textual syntax.md

--- a/I. Using Thymeleaf/13.1 Textual syntax.md
+++ b/I. Using Thymeleaf/13.1 Textual syntax.md
@@ -14,15 +14,15 @@
   Sincerely,
     The Reporter.
 ```
-Even without tags, the example above is a complete and valid Thymeleaf template that can be executed in the `TEXT` template mode.
+即使没有标签，上面的例子也是一个完整有效的Thymeleaf模板。它可以在`文本`模板模式下执行。
 
-But in order to include more complex logic than mere output expressions, we need a new non-tag-based syntax:
+但是，为了包含更复杂的逻辑，而不仅仅只是输出表达式，我们需要一种新的基于无标签的语法：
 ```
 [# th:each="item : ${items}"]
   - [(${item})]
 [/]
 ```
-Which is actually the condensed version of the more verbose:
+这实际上是如下复杂版本的压缩：
 ```
 [#th:block th:each="item : ${items}"]
   - [#th:block th:utext="${item}" /]
