Update 13.1 Textual syntax.md

--- a/I. Using Thymeleaf/13.1 Textual syntax.md
+++ b/I. Using Thymeleaf/13.1 Textual syntax.md
@@ -28,9 +28,9 @@
   - [#th:block th:utext="${item}" /]
 [/th:block]
 ```
-Note how this new syntax is based on elements (i.e. processable tags) that are declared as `[#element ...]` instead of `<element ...>`. Elements are open like `[#element ...]` and closed like `[/element]`, and standalone tags can be declared by minimizing the open element with a `/` in a way almost equivalent to XML tags: `[#element ... /]`.
+注意：这种新语法基于元素（也就是可处理的标签）。它们被声明为`[#element ...]`，而不是`<element ...>`。元素像`[#element ...]`这样开始，像`[/element]`这样结束。独立标签可以用开始元素附上`/`声明，几乎等价于XML标签：`[#element ... /]`。
 
-The Standard Dialect only contains a processor for one of these elements: the already-known `th:block`, though we could extend this in our dialects and create new elements in the usual way. Also, the `th:block` element (`[#th:block ...] ... [/th:block]`) is allowed to be abbreviated as the empty string (`[# ...] ... [/]`), so the above block is actually equivalent to:
+标准方言只包含一个处理器，对应于这些元素中的其中一个：已经知道的`th:block`。尽管我们可以在方言里扩展它，已通常的方式创建新元素。而且，`th:block`元素（`[#th:block ...] ... [/th:block]`）可以简写为空字符串（`[# ...] ... [/]`），所以上面的代码块实际上等价于：
 ```
 [# th:each="item : ${items}"]
   - [# th:utext="${item}" /]
