Update 13.1 Textual syntax.md

--- a/I. Using Thymeleaf/13.1 Textual syntax.md
+++ b/I. Using Thymeleaf/13.1 Textual syntax.md
@@ -36,15 +36,15 @@
   - [# th:utext="${item}" /]
 [/]
 ```
-And given `[# th:utext="${item}" /]` is equivalent to an inlined unescaped expression, we could just use it in order to have less code. Thus we end up with the first fragment of code we saw above:
+`[# th:utext="${item}" /]`等价于一个内联的非转义表达式，我们可以使用它减少代码。因此，我们就以上面看到的第一段代码结束了：
 ```
 [# th:each="item : ${items}"]
   - [(${item})]
 [/]
 ```
-Note that the textual syntax requires full element balance (no unclosed tags) and quoted attributes – it’s more XML-style than HTML-style.
+注意：文本语法要求完全的元素平衡（没有未关闭的标签）并且属性用引号包围————比起HTML风格，它更像是XML风格。
 
-Let’s have a look at a more complete example of a TEXT template, a plain text email template:
+让我们看一个文本模板的更加完整的例子，一个纯文本邮件模板：
 ```
 Dear [(${customer.name})],
 
@@ -57,7 +57,7 @@ This is the list of our products:
 Thanks,
   The Thymeleaf Shop
 ```
-After executing, the result of this could be something like:
+执行后，结果类似于：
 ```
 Dear Mary Ann Blueberry,
 
@@ -71,7 +71,7 @@ This is the list of our products:
 Thanks,
   The Thymeleaf Shop
 ```
-And another example in `JAVASCRIPT` template mode, a `greeter.js` file, we process as a textual template and which result we call from our HTML pages. Note this is not a `<script>` block in an HTML template, but a `.js` file being processed as a template on its own:
+另一个用`JAVASCRIPT`模板模式的例子，一个`greeter.js`文件。我们把它当作文本模板处理，从我们的HTML页码调用它。注意：这不是HTML模板里的`<script>`块，而是一个当作模板处理的`.js`文件：
 ```javascript
 var greeter = function() {
 
@@ -83,7 +83,7 @@ var greeter = function() {
 
 };
 ```
-After executing, the result of this could be something like:
+执行后，结果类似于：
 ```javascript
 var greeter = function() {
 
