--- a/I. Using Thymeleaf/13.1 Textual syntax.md
+++ b/I. Using Thymeleaf/13.1 Textual syntax.md
@@ -1,6 +1,6 @@
 ### 13.1 文本语法
 
-有三种Thymeleaf模版模式被认为是`文本`：`文本`，`JAVASCRIPT`和`CSS`。它们区别于标记模版模式：`HTML`和`XML`.
+有三种Thymeleaf模版模式被认为是`文本`：`TEXT`，`JAVASCRIPT`和`CSS`。它们区别于标记模版模式：`HTML`和`XML`.
 
 文本模版模式与标记模版模式的关键区别在于：在文本模版里，没有标签可供我们以属性的形式插入逻辑。所以，我们不得不依赖其它的机制。
 
@@ -14,7 +14,7 @@
   Sincerely,
     The Reporter.
 ```
-即使没有标签，上面的例子也是一个完整有效的Thymeleaf模板。它可以在`文本`模板模式下执行。
+即使没有标签，上面的例子也是一个完整有效的Thymeleaf模板。它可以在`TEXT`模板模式下执行。
 
 但是，为了包含更复杂的逻辑，而不仅仅只是输出表达式，我们需要一种新的基于无标签的语法：
 ```
@@ -44,7 +44,7 @@
 ```
 注意：文本语法要求完全的元素平衡（没有未关闭的标签）并且属性用引号包围————比起HTML风格，它更像是XML风格。
 
-让我们看一个文本模板的更加完整的例子，一个纯文本邮件模板：
+让我们看一个`TEXT`模板的更加完整的例子，一个纯文本邮件模板：
 ```
 Dear [(${customer.name})],
 
