Update 13.3 Textual prototype-only comment blocks： adding code.md

--- a/I. Using Thymeleaf/13.3 Textual prototype-only comment blocks： adding code.md
+++ b/I. Using Thymeleaf/13.3 Textual prototype-only comment blocks： adding code.md
@@ -1,6 +1,6 @@
-### 13.3 文本原型评论块：添加代码
+### 13.3 文本原型注释块：添加代码
 
-The `JAVASCRIPT` and `CSS` template modes (not available for `TEXT`) allow including code between a special comment syntax `/*[+...+]*/` so that Thymeleaf will automatically uncomment such code when processing the template:
+`JAVASCRIPT`和`CSS`模版模式（`TEXT`不可用）允许在一句特殊的注释语法之间包含代码。当处理模版时，Thymeleaf将自动取消注释：
 ```javascript
 var x = 23;
 
