--- a/I. Using Thymeleaf/11.1. Standard HTML XML comments.md
+++ b/I. Using Thymeleaf/11.1. Standard HTML XML comments.md
@@ -1,6 +1,6 @@
 ### 11.1. 标准的HTML/XML注释
 
-可以在Thymeleaf模版的任何地方使用标准的HTML/XML评论`<!-- ... -->`。Thymeleaf不会处理这些评论里的任何东西，只是一字不差地把它们复制到结果里：
+可以在Thymeleaf模版的任何地方使用标准的HTML/XML注释`<!-- ... -->`。Thymeleaf不会处理这些注释里的任何东西，只是一字不差地把它们复制到结果里：
 ```html
 <!-- User info follows -->
 <div th:text="${...}">
