Update 11.2. Thymeleaf parser-level comment blocks.md

--- a/I. Using Thymeleaf/11.2. Thymeleaf parser-level comment blocks.md
+++ b/I. Using Thymeleaf/11.2. Thymeleaf parser-level comment blocks.md
@@ -1,10 +1,10 @@
 ### 11.2. Thymeleaf解析器级别注释块
 
-解析器级别评论块指的是在Thymeleaf解析时，会被简单地从模版里移除的代码。它们看起来就像这样：
+解析器级别注释块指的是在Thymeleaf解析时，会被简单地从模版里移除的代码。它们看起来就像这样：
 ```html
 <!--/* This code will be removed at Thymeleaf parsing time! */-->
 ```
-Thymeleaf会移除`<!--/*`和`*/-->`之间的所有东西。所以，当模版被静态地打开时，这些评论块也可以用来展示代码：
+Thymeleaf会移除`<!--/*`和`*/-->`之间的所有东西。所以，当模版被静态地打开时，这些注释块也可以用来展示代码：
 ```html
 <!--/*--> 
   <div>
